own runner main class introduced, bumping to 2.3.7